# lue

./: .gitignore  DEVELOPER.md  MANIFEST.in  README.md  VOICES.md  WORD_TIMING.md  pyproject.toml  requirements.txt  sample.txt  test_actual_timing.py  test_edge_integration.py  test_edge_word_timing.py  test_edge_word_timing_fix.py  test_highlighting_fix.py  test_kokoro_model_output.py  test_kokoro_precise_timing.py  test_kokoro_segments.py  test_kokoro_word_timing.py  test_precise_word_timing.py  test_reader_integration.py  test_sentence_transition_fix.py  test_simple_timing.py  test_timing_comparison.py  test_timing_comparison_v2.py  test_timing_continuity.py  test_word_highlighting.py  test_word_highlighting_demo.py  tmp_rovodev_test_numbers.py
lue/: __init__.py  __main__.py  audio.py  config.py  content_parser.py  guide.txt  input_handler.py  keyboard_shortcuts.json  keys_default.json  keys_vim.json  progress_manager.py  reader.py  timing_calculator.py  tts_manager.py  ui.py
lue/tts/: __init__.py  base.py  edge_tts.py  kokoro_tts.py
