[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lue-reader"
version = "0.3.0"
description = "A terminal-based eBook reader with modular text-to-speech capabilities and multi-format support"
readme = "README.md"
license = {text = "GPL-3.0"}
authors = [
    {name = "Starry Eyes"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Text Processing",
    "Environment :: Console",
]
requires-python = ">=3.10"
dependencies = [
    "python-docx>=1.2.0",
    "striprtf>=0.0.29",
    "rich>=14.1.0",
    "PyMuPDF>=1.26.3",
    "Markdown>=3.8.2",
    "platformdirs>=4.3.8",
    "edge-tts>=7.2.0",
]

[project.optional-dependencies]
kokoro = [
    "kokoro>=0.9.4",
    "soundfile>=0.13.1",
    "huggingface-hub>=0.34.4",
]

[project.scripts]
lue = "lue.__main__:cli"

[project.urls]
Homepage = "https://github.com/superstarryeyes/lue"
Repository = "https://github.com/superstarryeyes/lue"
Issues = "https://github.com/superstarryeyes/lue/issues"

[tool.setuptools.packages.find]
include = ["lue*"]

[tool.setuptools.package-data]
lue = ["py.typed", "guide.txt"]